sonarqube + rag v1